--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,5 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Run awesome-lint
-        uses: awesome-lint/awesome-lint@v0.1.0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - run: npm install -g awesome-lint
+      - run: awesome-lint
